# wago

./: .bazelrc  .gitignore  BUILD  Dockerfile  LICENSE  README.md  WORKSPACE
cmd/client/: BUILD  main.go
cmd/server/: BUILD  http.go  main.go
kubernetes/: BUILD  wago-balancer.yaml  wago-cluster.yaml  wago-debug.yaml  wago-namespace.yml  wago-server.yaml  wago-server.yml  wago-service.yaml
pkg/cli/: BUILD  auth.go  bank.go  cli.go  command.go  delete.go  new.go  node.go  send.go  status.go
pkg/cli/client/: BUILD.bazel  bank.go  create.go  send.go
pkg/cli/common/: BUILD.bazel  auth.go  delete.go  new.go
pkg/cli/server/: BUILD.bazel  bank.go  node.go  send.go  status.go
pkg/proto/: BUILD  wallet.proto
pkg/raft/: BUILD.bazel  raft.go
pkg/util/: BUILD.bazel  util.go
pkg/wallet/: BUILD  file.go  store.go  store_test.go  util.go  util_test.go  walletfile.go  walletstore.go  walletstore_test.go  walletutil.go
