load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bank.go",
        "send.go",
    ],
    importpath = "github.com/CodethinkLabs/wago/pkg/cli/client",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cli:go_default_library",
        "//pkg/proto:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/wallet:go_default_library",
        "@org_golang_x_crypto//ed25519:go_default_library",
    ],
)
